* Actually change the device when the device combobox is changed.
  Closes debian bug #729589
  (Can not scan using a Canon LiDE 210 with version 1.1.3-1)
* Show/hide options in CLI frontends via Edit/Preferences
* Fix Thunderbird detection from XFCE. Closes debian bug #701581
  (Thunderbird detection (for send email) does not work reliably on XFCE)


1.1.3 (25.02.2013):

* Added missing arguments to 'changed-progress' signal emission.
* Fix bug preventing import after error.
  Closes bug 155 (can't enter correct file name after incorrect file name)
* Fixed bug introduced in v1.1.2 causing only one page to be scanned
  when all requested
* Fixed bug introduced in v1.1.2 causing two pages to be scanned
  when only one requested


1.1.2 (10.02.2013):

* Add scrollbar to prevent long font names making save dialog too wide
  Closes Launchpad bug 1113208
  (The save dialogue is way to big for my screen and cannot resize)
* Don't need to convert image to .tiff for tesseract v3
  Thanks to Leon Fisk for the patch
* Fix parsing of hocr output from tesseract v3.02.01
  Thanks to Leon Fisk for the patch
* Correct tests for presence of cuneiform & tesseract installations


1.1.1 (01.02.2013):

* + support for tesseract 3.02.01
* Fixed tesseract 3.00 support
* Fixed bug sending PDF as email
  Closes bug 152 (No eMail gscan2pdf 1.1 Suse 12.2)
* Don't need to convert image to .bmp for cuneiform 1.1.0
* Ensure the image resolution, and therefore the page size, is either taken
  from the file or inferred from the page dimensions.
  Closes Launchpad bug 889549
  (gscan2pdf gimp integration creates page size error)
* Update to Slovak translation (thanks to Prescott_SK)


1.1.0 (18.11.2012):

* Fix applying default settings to widgets in scanimage dialog
  Closes debian bug #682818 (Presets aren't working)
* Fixed bug editing OCR output.
* Add profiles to libsane-perl frontend
* Fixed switching to last directory on open/save
* Fixed extracting image resolution in non-English locales