@@ -181,7 +181,7 @@ t/169_import_multipage_PDF2.t
 t/170_import_multipage_TIFF.t
 t/171_save_session.t
 t/172_open_session.t
-t/173_open_crashed_session.t
+t/173_open_multiple_session.t
 t/174_open_crashed_session.t
 t/21_rotate.t
 t/22_analyse_blank.t
