@@ -19,6 +19,7 @@
 * Show/hide options in CLI frontends via Edit/Preferences
 * Fix Thunderbird detection from XFCE. Closes debian bug #701581
   (Thunderbird detection (for send email) does not work reliably on XFCE)
+* Fixed bug opening a session file from multiple sessions
 
 
 1.1.3 (25.02.2013):
